--- a/app/views/beats/_meta_download.html.erb
+++ b/app/views/beats/_meta_download.html.erb
@@ -1,2 +1,2 @@
-<%= link_to download_beat_path(beat.id), remote: true, class: "meta-btn", title: "Download #{beat.title}" do %>
+<%= link_to download_beat_path(beat.id), remote: true, class: "meta-btn button secondary tiny", title: "Download #{beat.title}" do %>
 <span class="fa fa-download"></span>&nbsp;<%= beat.downloads %><% end %>
