--- a/app/views/pages/terms-of-service.html.erb
+++ b/app/views/pages/terms-of-service.html.erb
@@ -1,7 +1,11 @@
-<h1 class="page-title h2">Terms of Service</h1>
+<div class="small-12 columns">
+  
+  <h1 class="page-title">Terms of Service</h1>
 
-<p>You are free to download or use any midi file as you like from BeatLib, even for commercial purposes, all without asking permission.</p>
+  <p>You are free to download or use any midi file as you like from BeatLib, even for commercial purposes, all without asking permission.</p>
 
-<p>By registering on BeatLib you agree to release any midi file you upload into the public domain under <%= link_to 'Creative Commons Zero', 'http://creativecommons.org/publicdomain/zero/1.0/' %> and claim that you have the rights to do so.</p>
+  <p>By registering on BeatLib you agree to release any midi file you upload into the public domain under <%= link_to 'Creative Commons Zero', 'http://creativecommons.org/publicdomain/zero/1.0/' %> and claim that you have the rights to do so.</p>
 
-<p>Keep in mind that you cannot waive rights to a work that you do not own unless you have permission from the owner. To avoid infringing third party rights, you should consult with your legal advisor if you are unsure whether you have all the rights you need to distribute the work.</p>
+  <p>Keep in mind that you cannot waive rights to a work that you do not own unless you have permission from the owner. To avoid infringing third party rights, you should consult with your legal advisor if you are unsure whether you have all the rights you need to distribute the work.</p>
+  
+</div>
