--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,13 +13,11 @@
  *= require selectize.default
  * require jquery-ui/sortable
  *= require_self
+ *= require foundation
+ *= require responsive-tables
  */
 
-/* Compass mixins */
-@import "compass";
-
-/* Import Susy for grids */
-@import "susy";
+@import "foundation_and_overrides";
 
 /* Font Awesome */
 @import "font-awesome-sprockets";
@@ -29,84 +27,46 @@
 IMPORTING PARTIALS
 *********************/
 
-// normalize: http://necolas.github.io/normalize.css/
-@import "partials/normalize";
-
 // Sass variables
-@import "partials/variables";
+//@import "partials/variables";
 
 // typography
-@import "partials/typography";
+//@import "partials/typography";
 
 // Sass functions
 //@import "partials/functions";
 
 // import mixins
-@import "partials/mixins";
+//@import "partials/mixins";
 
 /*********************
 IMPORTING MODULES
 *********************/
 
-// alert boxes
-@import "modules/alerts";
-
 // buttons
-@import "modules/buttons";
+//@import "modules/buttons";
 
 // forms (inputs & labels)
-@import "modules/forms";
+//@import "modules/forms";
 
 /*********************
-BASE (MOBILE) SIZE
+Media Queries
 *********************/
 
-// styles in base.scss
-@import "breakpoints/base";
+@media #{$small-up} { @import "breakpoints/smallup"; }
+@media #{$small-only} { }
 
-/*********************
-LARGER MOBILE DEVICES
-*********************/
+@media #{$medium-up} { @import "breakpoints/mediumup"; }
+@media #{$medium-only} { }
 
-@media only screen and (min-width: 481px) {
+@media #{$large-up} { @import "breakpoints/largeup"; }
+@media #{$large-only} { }
 
-	// styles in 481up.scss
-	@import "breakpoints/481up";
+@media #{$xlarge-up} { @import "breakpoints/xlargeup"; }
+@media #{$xlarge-only} { }
 
-} // end of media query
-
-/*********************
-TABLET & SMALLER LAPTOPS
-*********************/
-
-@media only screen and (min-width: 768px) {
-
-	// styles in 768up.scss
-	@import "breakpoints/768up";
-
-} // end of media query
-
-/*********************
-DESKTOP
-*********************/
-
-@media only screen and (min-width: 1030px) {
-
-	// styles in 1030up.scss
-	//@import "breakpoints/1030up";
-
-} // end of media query
-
-/*********************
-LARGE VIEWING SIZE
-*********************/
-
-@media only screen and (min-width: 1240px) {
-
-	// styles in 1240up.scss
-	//@import "breakpoints/1240up";
-
-} // end of media query
+@media #{$xxlarge-up} { @import "breakpoints/xxlargeup"; }
+@media #{$xxlarge-only} { }
 
 /*********************
 PRINT STYLESHEET
