--- a/app/views/beats/new.html.erb
+++ b/app/views/beats/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New Beat</h1>
+<div class="small-12 columns">
 
-<%= render 'form' %>
+  <h1>New Beat</h1>
+  
+  <%= form_for @beat do |f| %>
 
-<%= link_to 'Back', beats_path %>
+    <%= render partial: 'form', locals: {f: f} %>
+
+    <p>
+      <%= f.submit "Upload Beat", class: "button radius" %>
+    </p>
+  
+  <% end %>
+  
+</div>
