--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,12 +1,8 @@
 <%= form_for([@beat, @beat.comments.build], remote: true) do |f| %>
   <%= f.hidden_field :user_id, value: current_user.id %>
 
-  <div class="validation-error"></div>
+  <%= f.text_area :body, placeholder: "Write a comment..." %>
 
-  <p>
-    <%= f.text_area :body, placeholder: "Write a comment..." %>
-  </p>
-
-  <p><%= f.submit "Submit Comment" %></p>
+  <%= f.submit "Submit Comment", class: "button secondary radius" %>
 
 <% end %>
