--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,16 @@
+<div class="small-12 columns">
+
 <h1>Resend confirmation instructions</h1>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path, html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <p>
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </p>
+  <%= f.input_div :email, field: { autofocus: true } %>
 
-  <p>
-    <%= f.submit "Resend confirmation instructions" %>
-  </p>
+  <%= f.submit "Resend confirmation instructions", class: "button radius" %>
+
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
