--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,16 @@
+<div class="small-12 columns">
+
 <h1>Forgot your password?</h1>
 
 <%= form_for(resource, as: resource_name, url: password_path, html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <p>
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </p>
+  <%= f.input_div :email, field: { autofocus: true } %>
 
-  <p>
-    <%= f.submit "Send me reset password instructions" %>
-  </p>
+  <%= f.submit "Send me reset password instructions", class: "button radius" %>
+
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
