--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,86 +1,19 @@
+<div class="small-12 columns">
+
 <h1>Edit <%= resource_name.to_s.humanize %></h1>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
-
-  <h2>Required Fields</h2>
-
-  <p>
-    <%= f.label :username %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </p>
+  
+  <%= render partial: 'form_fields', locals: { f: f } %>
 
   <p>
-    <%= f.label :email %><br />
-    <%= f.email_field :email %>
-  </p>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-  <% end %>
-
-  <p>
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </p>
-
-  <p>
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </p>
-
-  <p>
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </p>
-
-  <h2>Optional Information</h2>
-
-  <p>
-    <%= f.label :where_are_you_from? %><br />
-    <%= f.text_field :location %>
-  </p>
-
-  <p>
-    <%= f.label :what_are_your_favorite_musical_styles_or_artists? %><br />
-    <%= f.text_field :music_styles %>
-  </p>
-
-  <p>
-    <%= f.label :what_do_you_do_with_music? %><br />
-    <%= f.text_field :music_do %>
-  </p>
-
-  <p>
-    <%= f.label :website %><br />
-    <%= f.text_field :website %>
-  </p>
-
-  <%=
-  # social media?
-  %>
-
-  <p>
-    <%= f.label :profile_picture %><br>
-    <%= image_tag @user.avatar.url(:thumb) if @user.avatar.url(:thumb) %><br>
-    Will accept JPG, PNG, and GIF with a maximum filesize of 200kb<br>
-    <%= f.file_field :avatar %>
-  </p>
-
-  <%=
-  # captcha?
-  %>
-
-  <p>
-    <%= f.submit "Update" %>
+    <%= f.submit "Update", class: "button radius" %>
   </p>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "button secondary radius" %></p>
 
-<%= link_to "Back", :back %>
+</div>
