--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,77 +1,21 @@
-<h1>Register</h1>
+<div class="small-12 columns">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <h1>Register</h1>
 
-  <h2>Required Fields</h2>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
 
-  <p>
-    <%= f.label :username %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </p>
+    <%= render partial: 'form_fields', locals: { f: f } %>
 
-  <p>
-    <%= f.label :email %><br />
-    <%= f.email_field :email %>
-  </p>
+    <p>
+      <%= f.label :terms_of_service %>
+      <%= f.check_box :terms_of_service %> By registering you agree to our <%=  link_to 'terms of service', terms_of_service_path %> and to release any midi files you upload to the <%= link_to 'public domain', 'http://creativecommons.org/publicdomain/zero/1.0/' %>.
+    </p>
+  
+    <%= f.submit "Register", class: "button radius" %>
 
-  <p>
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </p>
+  <% end %>
 
-  <p>
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </p>
+  <%= render "devise/shared/links" %>
 
-  <h2>Optional Information</h2>
-
-  <p>
-    <%= f.label :where_are_you_from? %><br />
-    <%= f.text_field :location %>
-  </p>
-
-  <p>
-    <%= f.label :what_are_your_favorite_musical_styles_or_artists? %><br />
-    <%= f.text_field :music_styles %>
-  </p>
-
-  <p>
-    <%= f.label :what_do_you_do_with_music? %><br />
-    <%= f.text_field :music_do %>
-  </p>
-
-  <p>
-    <%= f.label :website %><br />
-    <%= f.text_field :website %>
-  </p>
-
-  <%=
-  # social media?
-  %>
-
-  <p>
-    <%= f.label :profile_picture %><br>
-    Will accept JPG, PNG, and GIF with a maximum filesize of 200kb<br>
-    <%= f.file_field :avatar %>
-  </p>
-
-  <%=
-  # captcha?
-  %>
-
-  <p>
-    <%= f.label :terms_of_service %><br>
-    <%= f.check_box :terms_of_service %> By registering you agree to our <%=  link_to 'terms of service', terms_of_service_path %> and to release any midi files you upload to the <%=  link_to 'public domain', 'http://creativecommons.org/publicdomain/zero/1.0/' %>.
-  </p>
-
-  <p>
-    <%= f.submit "Register" %>
-  </p>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
