--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,15 +1,28 @@
-<nav id="nav-main" role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement">
-    <ul class="nav">
-      <% if user_signed_in? %>
-        <li><%=  link_to 'Beats', beats_path %></li>
-        <li><%= link_to 'Upload', new_beat_path, title: "Upload a new beat" %></li>
-        <li><%= link_to 'Profile', permalink_user_path(current_user.permalink), title: "View Profile" %></li>
-        <li><%=  link_to 'Terms', terms_of_service_path %></li>
-        <li><%= link_to 'Logout', logout_path, title: "Logout" %></li>
-      <% else %>
-        <li><%=  link_to 'Beats', beats_path %></li>
-        <li><%=  link_to 'Terms', terms_of_service_path %></li>
-        <li><%= link_to 'Login',  login_path, title: "Login" %></li>
-      <% end %>
+<div class="contain-to-grid">
+  <nav class="top-bar" data-topbar role="navigation">    
+
+    <ul class="title-area">
+      <li class="name">
+        <h1><%= link_to 'BeatLib', root_path %></h1>
+      </li>
+
+      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+      <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
     </ul>
-</nav>
+
+    <section class="top-bar-section">
+      <!-- Right Nav Section -->
+      <ul class="right">
+        <% if user_signed_in? %>
+          <li><%=  link_to 'Beats', beats_path %></li>
+          <li><%= link_to 'Upload', new_beat_path, title: "Upload a new beat" %></li>
+          <li><%= link_to 'Profile', permalink_user_path(current_user.permalink), title: "View Profile" %></li>
+          <li><%= link_to 'Log Out', logout_path, title: "Log Out" %></li>
+        <% else %>
+          <li><%=  link_to 'Beats', beats_path %></li>
+          <li><%= link_to 'Log In',  login_path, title: "Log In" %></li>
+        <% end %>
+      </ul>
+    </section>
+  </nav>
+</div>
