--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,30 +1,81 @@
-<h1 class="h2">User Profile</h1>
+<div class="small-12 columns">
+  
+  <h1>User Profile</h1>
 
-<% if user_signed_in? && @user.id.to_s == current_user.id.to_s %>
-  <p><%= link_to 'Edit account', permalink_edit_user_path %></p>
-<% end %>
+  <% if user_signed_in? && @user.id.to_s == current_user.id.to_s %>
+    <p><%= link_to 'Edit account', permalink_edit_user_path %></p>
+  <% end %>
 
-<div class="cf">
-  <%= image_tag @user.avatar.url(:medium), class: "user-avatar" if @user.avatar.url(:medium) %>
+  <div class="clearfix">
+    <%= image_tag @user.avatar.url(:medium), class: "avatar left" if @user.avatar.url(:medium) %>
 
-  <ul class="user-info">
-    <li>Username: <%= @user.name if @user.name %></li>
-    <li>Location: <%= @user.location if @user.location %></li>
-    <li>Website: <%= @user.website if @user.website %></li>
-    <li>About <%= @user.name if @user.name %>:</li>
-    <li>Favorite musical styles or artists: <%= @user.music_styles if @user.music_styles %></li>
-    <li>What do you do with music: <%= @user.music_do if @user.music_do %></li>
+    <ul class="no-bullet">
+      <li>Username: <%= @user.name if @user.name %></li>
+      <li>Location: <%= @user.location if @user.location %></li>
+      <li>Website: <%= @user.website if @user.website %></li>
+      <li>About <%= @user.name if @user.name %>:</li>
+      <li>Favorite musical styles or artists: <%= @user.music_styles if @user.music_styles %></li>
+      <li>What do you do with music: <%= @user.music_do if @user.music_do %></li>
+    </ul>
+  </div>
+  
+  <ul class="tabs" data-tab role="tablist">
+    <li class="tab-title active" role="presentation"><a href="#beats">Beats</a></li>
+    <li class="tab-title" role="presentation"><a href="#favorites">Favorites</a></li>
+    <li class="tab-title" role="presentation"><a href="#comments">Comments</a></li>
   </ul>
+  
+  <div class="tabs-content">
+    <section role="tabpanel" aria-hidden="false" class="content active" id="beats">
+
+      <table class="responsive" role="grid">
+        <thead>
+          <tr>
+            <td>Title</td>
+            <td>Preview</td>
+            <td>Download</td>
+            <td>Tags</td>
+            <td>Downloads</td>
+            <td>Favorites</td>
+            <td>Comments</td>
+            <td>Edit</td>
+            <td>Delete</td>
+          </tr>
+        </thead>
+        
+        <tbody>
+          <%= render partial: 'beat', collection: @beats %>
+        </tbody>
+      </table>
+      
+    </section>
+    
+    <section role="tabpanel" aria-hidden="true" class="content" id="favorites">
+
+      <table class="responsive" role="grid">
+        <thead>
+          <tr>
+            <td>Title</td>
+            <td><span class="fa fa-tag"></span>&nbsp;Tags</td>
+            <td><span class="fa fa-download"></span>&nbsp;Downloads</td>
+            <td><span class="fa fa-heart"></span>&nbsp;Favorites</td>
+            <td><span class="fa fa-comment"></span>&nbsp;Comments</td>
+            <td>Delete</td>
+          </tr>
+        </thead>
+        
+        <tbody>
+          <%= render partial: 'favorites/favorite', collection: @favorites %>
+        </tbody>
+      </table>
+        
+    </section>
+    
+    <section role="tabpanel" aria-hidden="true" class="content" id="comments">
+
+      <p>Recent comments.</p>
+        
+    </section>
+    
+  </div>
 </div>
-
-<h2 class="h3">User Beats</h2>
-
-<ul id="user-beats">
-  <%= render partial: 'beat', collection: @beats %>
-</ul>
-
-<h2 class="h3">User Favorites</h2>
-
-<ul id="user-favorites">
-  <%= render partial: 'favorites/favorite', collection: @favorites %>
-</ul>
